@@ -3,11 +3,16 @@ use Mojo::Base -base;
 
 use Scalar::Util 'looks_like_number';
 
+has 'data';
+
 sub contains { shift->_pointer(1, @_) }
 sub get      { shift->_pointer(0, @_) }
 
+sub new { @_ > 1 ? shift->SUPER::new(data => shift) : shift->SUPER::new }
+
 sub _pointer {
   my ($self, $contains, $data, $pointer) = @_;
+  ($data, $pointer) = ($self->data, $data) unless defined $pointer;
 
   return $data unless $pointer =~ s!^/!!;
   for my $p ($pointer eq '' ? ($pointer) : (split '/', $pointer)) {
@@ -41,23 +46,38 @@ Mojo::JSON::Pointer - JSON Pointers
 
   use Mojo::JSON::Pointer;
 
-  my $pointer = Mojo::JSON::Pointer->new;
-  say $pointer->get({foo => [23, 'bar']}, '/foo/1');
-  say 'Contains "/foo".' if $pointer->contains({foo => [23, 'bar']}, '/foo');
+  my $pointer = Mojo::JSON::Pointer->new({foo => [23, 'bar']});
+  say $pointer->get('/foo/1');
+  say 'Contains "/foo".' if $pointer->contains('/foo');
 
 =head1 DESCRIPTION
 
 L<Mojo::JSON::Pointer> is a relaxed implementation of
 L<RFC 6901|http://tools.ietf.org/html/rfc6901>.
 
+=head1 ATTRIBUTES
+
+L<Mojo::JSON::Pointer> implements the following attributes.
+
+=head2 data
+
+  my $data = $pointer->data;
+  $pointer = $pointer->data({foo => 'bar'});
+
+Data to be processed.
+
 =head1 METHODS
+
+L<Mojo::JSON::Pointer> inherits all methods from L<Mojo::Base> and implements
+the following new ones.
 
 =head2 contains
 
+  my $bool = $pointer->contains('/foo/1');
   my $bool = $pointer->contains($data, '/foo/1');
 
 Check if data structure contains a value that can be identified with the given
-JSON Pointer.
+JSON Pointer, defaults to using L</data>.
 
   # True
   $pointer->contains({'♥' => 'mojolicious'}, '/♥');
@@ -71,9 +91,11 @@ JSON Pointer.
 
 =head2 get
 
+  my $value = $pointer->get('/foo/bar');
   my $value = $pointer->get($data, '/foo/bar');
 
-Extract value identified by the given JSON Pointer.
+Extract value identified by the given JSON Pointer, defaults to using
+L</data>.
 
   # "mojolicious"
   $pointer->get({'♥' => 'mojolicious'}, '/♥');
@@ -86,6 +108,13 @@ Extract value identified by the given JSON Pointer.
 
   # "6"
   $pointer->get({foo => 'bar', baz => [4, 5, 6]}, '/baz/2');
+
+=head2 new
+
+  my $pointer = Mojo::JSON::Pointer->new;
+  my $pointer = Mojo::JSON::Pointer->new({foo => 'bar'});
+
+Build new L<Mojo::JSON::Pointer> object.
 
 =head1 SEE ALSO
 
