@@ -144,14 +144,14 @@ sub json_has {
   my ($self, $p, $desc) = @_;
   $desc ||= qq{has value for JSON Pointer "$p"};
   return $self->_test('ok',
-    !!Mojo::JSON::Pointer->new->contains($self->tx->res->json, $p), $desc);
+    !!Mojo::JSON::Pointer->new($self->tx->res->json)->contains($p), $desc);
 }
 
 sub json_hasnt {
   my ($self, $p, $desc) = @_;
   $desc ||= qq{has no value for JSON Pointer "$p"};
   return $self->_test('ok',
-    !Mojo::JSON::Pointer->new->contains($self->tx->res->json, $p), $desc);
+    !Mojo::JSON::Pointer->new($self->tx->res->json)->contains($p), $desc);
 }
 
 sub json_is {
@@ -288,7 +288,7 @@ sub _build_ok {
 
 sub _json {
   my ($self, $method, $p) = @_;
-  return Mojo::JSON::Pointer->new->$method(j(@{$self->message // []}[1]), $p);
+  return Mojo::JSON::Pointer->new(j(@{$self->message // []}[1]))->$method($p);
 }
 
 sub _message {
