@@ -1,5 +1,6 @@
 
 4.82  2014-02-19
+  - Added data attribute to Mojo::JSON::Pointer.
   - Added decode_json and encode_json functions to Mojo::JSON.
   - Fixed small decoding error bug in Mojo::JSON.
   - Fixed bug in "user_agent_online.t".
